# realloc

./: .gitignore  Dockerfile  Makefile  app.py  docker-compose.yml  generate_all_test_data.ps1  pyproject.toml  readme.md  requirements.txt  sample_input.json  setup.cfg  setup.py  test_data_generator.py  thoughts.md  trades.csv
.github/workflows/: ci.yml
TradeManager/: allocation.py  portfolio.py  tradeCalculator.py  tradeManager.py  trade_calculator.py  trade_manager.py  trade_request.py
TradeManager/test/: mocks.pkl  test_data_generator.py  test_model.py  test_portfolio.py  test_trade_manager.py  unit_tests.py
TradeManager/test/test_data/: Trade Request Example.csv  Trade Request Example.xlsx  Trade Request Example_missing_price.xlsx  account_matrix.pkl  calculator.json  excel_request.pkl  intermediate_test_data.py  mocks.pkl  model.pkl  portfolio.pkl  prices.json  request.pkl  test_data.py  test_data_generator.py  trade_list.pkl  trade_request_example.json  trades.pkl  xyz_broker.json
TradeManager/test/test_data/buysOnly/: BuyOnlyRequest.xlsx  model.pkl  portfolio.pkl  prices.pkl  request.pkl  (+1 more)
TradeShop.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
core/: __init__.py  __main__.py  accounts.py  allocator.py  matrix.py  prices.py  selectors.py  trades.py  utils.py
core/cli/: partial_rebalance_main.py  portfolio_main.py  rebalance_main.py
core/plugins/: base.py  csv_exporter.py  loader.py
core/scripts/: end_to_end_1.py
docs/: API_REFERENCE.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  plugin-development.ipynb  plugin-development.md
examples/: basic_rebalance.ipynb  input.json  multi_account_rebalance.ipynb  readme.md  stress_test_rebalance.py  tax_aware_rebalance.ipynb
examples/multi_account_non_tax/: script.py
examples/multi_account_non_tax/input/: positions.csv  prices.csv  target_allocation.csv
examples/multi_account_non_tax/output/: expected_trades.csv
examples/single_account/input/: prices.csv
examples/single_account/output/: expected_trades.csv
examples/single_account_non_tax/: script.py
examples/single_account_non_tax/input/: positions.csv  target_allocation.csv
portfolio_manager/TradeManager/: trade_manager.py
portfolio_manager/test/: test_data_generator.py  unit_tests.py
src/realloc/: __init__.py  accounts.py  allocator.py  matrix.py  models.py  portfolio.py  selectors.py  trades.py
src/realloc/cli/: partial_rebalance_main.py  portfolio_main.py  rebalance_csv_input.py  rebalance_json_input.py  rebalance_main.py
src/realloc/plugins/: csv_exporter.py  loader.py
src/realloc/scripts/: end_to_end_1.py
test/: intermediate_test_data.py  readme.md  test_core.py  test_data.py  test_data_generator.py  test_tradeCalculator.py  test_trade_library.py  unit_tests.py
test/test_data/: prices.pkl
test/test_data/portfolio_model_prices/: multi_account_single_target_actual_model.pkl  multi_account_single_target_actual_prices.pkl  no_trades_portfolio.pkl  sell_only_multi_account_actual_single_target_model.pkl  sell_only_multi_account_actual_single_target_portfolio.pkl  sell_only_multi_account_actual_single_target_prices.pkl  sell_only_multi_account_target_actual_equal_model.pkl
test/test_data/trade_request_prices/: buy_only_multi_account_single_target_actual_prices.pkl  buy_only_multi_account_single_target_actual_request.pkl  single_account_model_multi_target_prices.pkl  single_account_model_multi_target_request.pkl
tests/: test_allocator.py  test_cli.py  test_core.py  test_fuzz.py  test_main.py  test_matrix.py  test_realloc.py  test_selectors.py
tests/test_cli/: test_partial_rebalance.py  test_rebalance_csv_input.py  test_rebalance_main.py
tests/test_plugins/: conftest.py
tests/test_plugins/test_core/: test_base.py
tests/test_plugins/test_exporters/: test_csv_exporter.py
tests/test_plugins/test_validators/: test_max_positions.py  test_minimum_value.py
tests/test_scenarios/: scenarios.py  test_scenarios.py
tests/test_scenarios/test_cases/: simple_two_account.json
trade_generator/: accounts.py  allocation.py  core.py  matrix.py  models.py  portfolio.py  prices.py  selectors.py  trade_calculator.py  trade_library.py  trade_manager.py  trades.py
trade_generator/scripts/: end_to_end_1.py
(+149 files in other folders)
